--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -27,7 +27,7 @@
   fill: var(--logo-icon);
   background-color: var(--text-color);
   border-radius: 8px;
-  padding: 10px 12px;
+  padding: 8px 10px;
 }
 
 .projectName {
@@ -57,7 +57,7 @@
 
 .register {
   display: flex;
-  width: 344px;
+  width: 335px;
   padding: 14px 0px;
   justify-content: center;
   align-items: center;
@@ -73,6 +73,21 @@
   &:hover,
   &:focus {
     background-color: #161616c5;
+  }
+}
+
+@media only screen and (max-width: 374px) {
+  .register {
+    width: 90vw;
+  }
+  .description {
+    width: 90vw;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .register {
+    width: 344px;
   }
 }
 
