--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -95,7 +95,7 @@
 
 .errorForEmail,
 .errorForPassword {
-  /* position: fixed; */
+  position: fixed;
   color: var(--hight);
   font-size: 12px;
   margin-top: 3px;
