--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -95,8 +95,12 @@
 
 .errorForEmail,
 .errorForPassword {
-  position: fixed;
+  /* position: fixed; */
   color: var(--hight);
   font-size: 12px;
   margin-top: 3px;
 }
+
+/* .eye {
+  fill: #490333;
+} */
