--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -48,8 +48,16 @@ a {
 button {
   font-family: inherit;
   font-size: inherit;
+  text-align: center;
   cursor: pointer;
   border: 0;
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
+svg {
+  margin: auto 0;
 }
 
 img {
