--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -13,6 +13,7 @@
   --medium: #e09cb5;
   --without: rgba(255, 255, 255, 0.3);
   --hight: #bedbb0;
+  --accentBtn: #9dc888;
 }
 
 .dark-theme {
@@ -36,4 +37,5 @@
   --secondary-text-color: rgba(255, 255, 255, 0.7);
   --third-text-color: rgba(255, 255, 255, 0.5);
   --accent: #5255bc;
+  --accentBtn: #7b7ede;
 }
