--- a/src/components/BoardsItem/BoardsItem.module.css
+++ b/src/components/BoardsItem/BoardsItem.module.css
@@ -1,4 +1,5 @@
 .list_item {
+  min-height: 62px;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -12,6 +13,7 @@
     display: none;
   }
 }
+
 .title {
   margin-right: auto;
 }
