add scroll setting

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -8,6 +8,8 @@
   --text-color: #161616;
   --secondary-text-color: rgba(255, 255, 255, 0.8);
   --third-text-color: rgba(22, 22, 22, 0.5);
+  --thumb-color: rgba(22, 22, 22, 0.1);
+  --background-thumb-color: #e8e8e8;
   --accent: #bedbb0;
   --low: #8fa1d0;
   --medium: #e09cb5;
