--- a/src/components/NewBoard/NewBoard.module.css
+++ b/src/components/NewBoard/NewBoard.module.css
@@ -19,7 +19,7 @@
 .newBoardTitleInput {
   border: 1px solid #bedbb0;
   border-radius: 8px;
-  min-width: 287px;
+  min-width: 100%;
   box-shadow: 0 4px 16px 0 rgba(22, 22, 22, 0.08);
   opacity: 0.4;
   font: 400 14px 'Poppins', sans-serif;
@@ -95,8 +95,9 @@
     flex-wrap: wrap;  
     gap: 4px;   
     justify-content: flex-start;
-    width: 252px;
+    width: 100%;
     margin-bottom: 40px;
+    padding-right: 35px;
   }
   
   .backgroundLabel {
