--- a/src/components/BoardForm/BoardForm.module.css
+++ b/src/components/BoardForm/BoardForm.module.css
@@ -1,12 +1,6 @@
 .boardContainer {
-  border-radius: 8px;
-  /* min-width: 335px; */
-  /* min-height: 433px; */
-  background: #fcfcfc;
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-      justify-content: center; */
 }
 
 .formTitle {
@@ -17,6 +11,7 @@
 }
 
 .titleInput {
+  border: none;
   border: 1px solid #bedbb0;
   border-radius: 8px;
   min-width: 100%;
@@ -108,10 +103,6 @@
   transition: border 0.3s ease;
   border-radius: 6px;
 }
-
-/* input[type="radio"]:checked + .backgroundLabel .backgroundImage {
-      border: 5px solid #bedbb0;
-    } */
 
 .selected .backgroundImage {
   border: 3px solid #bedbb0;
