--- a/src/components/ModalWrapper/ModalWrapper.module.css
+++ b/src/components/ModalWrapper/ModalWrapper.module.css
@@ -23,7 +23,7 @@
   stroke: var(--text-color);
 }
 
-@media (max-width: 375px) {
+@media (min-width: 375px) {
   .modalContainer {
     width: 335px;
     padding: 24px;
@@ -40,7 +40,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .modalContainer {
     width: 350px;
   }
