(board) added adaptive styles

--- a/src/components/MainDashboard/MainDashboard.module.css
+++ b/src/components/MainDashboard/MainDashboard.module.css
@@ -3,3 +3,11 @@
     padding: 14px;
     background-color: var(--add-column-button-background);
 }
+
+.columns-container {
+    display: flex;
+    gap: 18px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
