--- a/src/components/HeaderDashboard/HeaderDashboard.module.css
+++ b/src/components/HeaderDashboard/HeaderDashboard.module.css
@@ -26,3 +26,16 @@
 .icon {
     stroke:none;
 }
+
+
+@media (min-width: 768px) and (max-width: 1439px) {
+    .container {
+        margin-bottom: 26px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .container {
+        margin-bottom: 10px;
+    }
+}
