--- a/src/components/TasksList/TasksList.module.css
+++ b/src/components/TasksList/TasksList.module.css
@@ -6,7 +6,7 @@
   gap: 8px;
   overflow: scroll;
   scrollbar-width: 8px;
-  scrollbar-color: #8fa1d0 #fcfcfc;
+  scrollbar-color: #1616161a #e8e8e8;
 }
 
 @media screen and (min-width: 768px) {
