--- a/src/components/Sidebar/Logout/Logout.module.css
+++ b/src/components/Sidebar/Logout/Logout.module.css
@@ -24,6 +24,13 @@
 
 .textLogout {
   font-size: 14px;
-  color: #161616;
+  color: var(--text-color);
   font-weight: 500;
+}
+
+
+@media (min-width: 1440px) {
+  .textLogout {
+    font-size: 16px;
+  }
 }
