--- a/src/components/Sidebar/LogoComponent/LogoComponent.module.css
+++ b/src/components/Sidebar/LogoComponent/LogoComponent.module.css
@@ -1,4 +1,5 @@
 .logoBox {
+    cursor: pointer;
     justify-content: start;
     display: flex;
     align-items: center;
@@ -6,6 +7,7 @@
     padding-top: 14px;
     padding-left: 14px;
     margin-bottom: 70px;
+
 }
 
 .box {
