--- a/src/components/Sidebar/CreateBoard/CreateBoard.module.css
+++ b/src/components/Sidebar/CreateBoard/CreateBoard.module.css
@@ -23,6 +23,14 @@
         align-items: center;
         justify-content: center;
 
+        transition: background-color 0.3s ease;
+
+        :hover,
+        :focus {
+            background-color: var(--accentBtn);
+            border-radius: 6px;
+        }
+
     }
 
     .btnPlus {
