--- a/src/components/Sidebar/LogoComponent/LogoComponent.module.css
+++ b/src/components/Sidebar/LogoComponent/LogoComponent.module.css
@@ -1,11 +1,12 @@
 .logoBox {
+    cursor: pointer;
     justify-content: start;
     display: flex;
     align-items: center;
     gap: 8px;
     padding-top: 14px;
-    padding-left: 14px;
     margin-bottom: 70px;
+
 }
 
 .box {
