--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -34,3 +34,24 @@
     flex-direction: row;
   }
 }
+
+.violet-theme .Toastify__toast {
+  background-color: #6a4c9c;
+  color: white;
+}
+
+.violet-theme .Toastify__toast--success {
+  background-color: #8e7dc3;
+}
+
+.violet-theme .Toastify__toast--error {
+  background-color: #9c6a86;
+}
+
+.violet-theme .Toastify__toast--warning {
+  background-color: #c68fcb;
+}
+
+.violet-theme .Toastify__toast--info {
+  background-color: #b0a0d1;
+}
