--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,10 @@
 .homePage {
-  background-color: gray;
+  background-color: var(--background-color);
   height: 100%;
+  text-align: center;
+  color: var(--text-color);
+}
+
+.btn {
+  color: var(--accent);
 }
