stylish text homePage

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,10 +1,31 @@
-.homePage {
-  background-color: var(--background-color);
+.homePage_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
+}
+
+.text {
+  width: 335px;
   text-align: center;
   color: var(--text-color);
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: -0.24px;
 }
 
 .btn {
   color: var(--accent);
+}
+
+@media only screen and (min-width: 768px) {
+  .text {
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.28px;
+    width: 468px;
+  }
 }
