--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,4 @@
 .sidebar {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -8,15 +7,8 @@
   width: 225px;
   padding: 14px;
   transition: all ease-in-out 300ms;
+  height: calc(100vh - 10px)
 }
-
-.sidebarFirst {
-  height: 1000px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
 
 
 .mobile {
