--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -18,6 +18,8 @@
   --accentBtn: #9dc888;
   --filter-color: rgba(22, 22, 22, 0.8);
   --add-column-button-background: rgba(255, 255, 255, 1);
+  --label-color: rgba(22, 22, 22, 1);
+
 }
 
 .dark {
@@ -30,6 +32,7 @@
   --third-text-color: rgba(255, 255, 255, 0.5);
   --filter-color: rgba(255, 255, 255, 0.8);
   --add-column-button-background: rgba(18, 18, 18, 1);
+  --label-color: rgba(22, 22, 22, 1);
 }
 
 .violet {
@@ -45,4 +48,5 @@
   --accent: #5255bc;
   --accentBtn: #7b7ede;
   --add-column-button-background: rgba(255, 255, 255, 1);
+  --label-color: rgba(255, 255, 255, 1);
 }
