--- a/src/components/NeedHelp/NeedHelp.module.css
+++ b/src/components/NeedHelp/NeedHelp.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 197px;
   height: 238px;
-  background-color: var(--background-color);
+  background-color: var(--sidebar-card-background);
   border-radius: 8px;
   padding: 15px;
   margin: 0 auto;
@@ -44,7 +44,8 @@
 }
 
 .icon {
-  stroke: white;
+  stroke: var(--text-color);
+  fill: transparent;
 }
 
 @media (min-width: 375px) {}
