--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow-x: hidden;
 }
 
 .outlet {
@@ -15,22 +16,8 @@
   height: 100%;
 }
 
-@media (min-width: 375px) {
-  .wrapper {
-    max-width: 375px;
-    margin: 0 auto;
-  }
-}
-
-@media (min-width: 768px) {
-  .wrapper {
-    max-width: 768px;
-  }
-}
-
 @media (min-width: 1440px) {
   .wrapper {
-    max-width: 100%;
     flex-direction: row;
   }
 }
