--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background: #ffffff;
+  background: var(--sidebar-background-color);
   border-radius: 8px;
   padding: 14px 14px 14px 24px;
   width: 100%;
@@ -27,16 +27,16 @@
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 8px;
-  color: #161616;
+  color: var(--text-color);
 }
 
 .task_description {
   height: 38px;
   overflow: hidden;
-  color: rgba(22, 22, 22, 0.7);
+  color: var(--secondary-text-color);
   text-overflow: ellipsis;
-  font-size: 14px;
-  color: #666;
+  font-weight: 400;
+  font-size: 12px;
   margin: 0 0 16px 0;
   line-height: 1.4;
 }
@@ -46,22 +46,53 @@
   height: 1px;
   border-radius: 8px;
   border-bottom: 1px solid #e5e5e5;
-  background-color: #e5e5e5;
   margin-bottom: 14px;
+  opacity: 0.1;
 }
 
 .task_footer {
   display: flex;
-  align-items: center;
-  gap: 24px;
+  align-items: flex-end;
+  gap: 14px;
 }
 
-.task_meta {
+.task_container_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.wrapper_title {
+  font-size: 8px;
+  font-weight: 400;
+  color: var(--text-color);
+  opacity: 0.5;
+}
+
+.task_priority_text {
+  margin: 0 auto;
+  font-family: Poppins;
+  font-size: 10px;
+  font-weight: 400;
+  color: var(--text-color);
+  font-style: normal;
+}
+
+.task_priority {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-size: 12px;
+  color: var(--text-color);
+}
+
+.task_deadline {
   display: flex;
   align-items: center;
   gap: 8px;
-  font-size: 12px;
-  color: #666;
+  font-size: 10px;
+  color: var(--text-color);
 }
 
 .task_priority::before {
@@ -93,25 +124,32 @@
   height: 12px;
   border-radius: 50%;
 }
-.task_priority::before {
-  content: '';
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-}
-
-.task_priority {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  color: #666;
-}
 
 .actions {
   display: flex;
-  gap: 2px;
+  gap: 8px;
   margin-left: auto;
+}
+
+.bell_icon {
+  margin: 0 auto;
+  margin-right: 4px;
+  width: 16px;
+  height: 16px;
+  fill: none;
+  stroke: #bedbb0;
+  opacity: 1;
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 .action-button {
@@ -126,15 +164,8 @@
   width: 16px;
   height: 16px;
   fill: none;
-  stroke: #161616;
-  opacity: 0.5;
-}
-
-.bell_icon {
-  width: 16px;
-  height: 16px;
-  fill: none;
-  stroke: var(--accent);
+  color: var(--secondary-text-color);
+  stroke: var(--secondary-text-color);
   opacity: 0.5;
 }
 
