--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -20,6 +20,7 @@
   --add-column-button-background: rgba(255, 255, 255, 1);
   --icon-wrapper-btn: #161616;
   --icon-modal-close: #161616;
+  --label-color: rgba(22, 22, 22, 1);
 }
 
 .dark {
@@ -34,6 +35,7 @@
   --add-column-button-background: rgba(18, 18, 18, 1);
   --icon-wrapper-btn: #161616;
   --icon-modal-close: #fff;
+  --label-color: rgba(22, 22, 22, 1);
 }
 
 .violet {
@@ -51,4 +53,5 @@
   --add-column-button-background: rgba(255, 255, 255, 1);
   --icon-wrapper-btn: #fff;
   --icon-modal-close: #161616;
+  --label-color: rgba(255, 255, 255, 1);
 }
