correct sidebar var, needhelp margin, header burger menu color

--- a/src/components/Sidebar/CreateBoard/CreateBoard.module.css
+++ b/src/components/Sidebar/CreateBoard/CreateBoard.module.css
@@ -11,7 +11,7 @@
 }
 
 .createBoardBtn {
-    background-color: var(--accent);
+    background-color: var(--accentBtn);
     color: var(--text-color);
     border-radius: 6px;
     width: 40px;
