--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 
 .menu_icon {
   stroke-width: 2.5px;
-  stroke: var(--text-color);
+  stroke: var(--icon-modal-close);
   width: 24px;
   height: 24px;
 }
@@ -25,6 +25,7 @@
   border-radius: 8px;
   object-fit: cover;
 }
+
 .userIconWrapper {
   position: relative;
   width: 32px;
