8 sidebar_correct sidebar var, add margin in needhelp, upd var in header burger menu (#121)
* LogoComponent

* props

* add CreateBoard / logout

* logOut logic

* add create component, deleted create in sidebar

* edit icon, add onclick

* needheil icon

* add css

* add refresh

* add link logo

* Add layout

* upd

* remove scroll

* remove media

* translete

* add scroll, correct btn, corretn style, add blur

* upd style color needHelp

* upd needHelp

* correct sidebar var, needhelp margin, header burger menu color

* upd plus

* upd

---------

Co-authored-by: Vadym_Lantukh <vadym.lantukh.1998@gmail.com>

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -20,6 +20,7 @@
   --add-column-button-background: rgba(255, 255, 255, 1);
   --icon-wrapper-btn: #161616;
   --icon-modal-close: #161616;
+  --icon-logout: #bedbb0;
   --label-color: rgba(22, 22, 22, 1);
 }
 
@@ -35,6 +36,7 @@
   --add-column-button-background: rgba(18, 18, 18, 1);
   --icon-wrapper-btn: #161616;
   --icon-modal-close: #fff;
+  --icon-logout: #bedbb0;
   --label-color: rgba(22, 22, 22, 1);
 }
 
@@ -53,5 +55,6 @@
   --add-column-button-background: rgba(255, 255, 255, 1);
   --icon-wrapper-btn: #fff;
   --icon-modal-close: #161616;
+  --icon-logout: #fff;
   --label-color: rgba(255, 255, 255, 1);
 }
