--- a/src/components/Sidebar/CreateBoard/CreateBoard.module.css
+++ b/src/components/Sidebar/CreateBoard/CreateBoard.module.css
@@ -11,7 +11,7 @@
 }
 
 .createBoardBtn {
-    background-color: var(--accent);
+    background-color: var(--accentBtn);
     color: var(--text-color);
     border-radius: 6px;
     width: 40px;
@@ -34,7 +34,7 @@
 
 .btnPlus {
     height: 20px;
-    stroke: #121212;
+    stroke: var(--icon-wrapper-btn);
 }
 
 .createText {
