--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -16,6 +16,16 @@
   height: 100%;
 }
 
+.blur {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(21, 21, 21, 0.3);
+  z-index: 98;
+}
+
 @media (min-width: 1440px) {
   .wrapper {
     flex-direction: row;
