--- a/src/components/Column/HeaderColumn/HeaderColumn.module.css
+++ b/src/components/Column/HeaderColumn/HeaderColumn.module.css
@@ -12,7 +12,7 @@
 }
 
 .title {
-  color: var(--text-color);
+  color: var(--label-color);
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.2px;
