--- a/src/components/HeaderDashboard/HeaderDashboard.module.css
+++ b/src/components/HeaderDashboard/HeaderDashboard.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  color: var(--text-color);
+  color: var(--label-color);
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.2px;
@@ -22,6 +22,11 @@
   font-weight: 500;
   letter-spacing: -0.2px;
   line-height: 1.5;
+  transition: color 0.3s ease;
+}
+
+.button:hover {
+  color: var(--accent);
 }
 
 .icon {
