--- a/src/components/MainDashboard/MainDashboard.module.css
+++ b/src/components/MainDashboard/MainDashboard.module.css
@@ -1,6 +1,21 @@
 .button {
+    min-width: 334px;
     max-width: 334px;
+    height: fit-content;
     padding: 14px;
+    background-color: var(--add-column-button-background);
+    color: var(--label-color);
+
+    svg {
+        stroke: var(--add-column-button-background);
+    }
+}
+
+.button span:first-of-type {
+    background: var(--label-color);
+}
+
+.btn:focus {
     background-color: var(--add-column-button-background);
 }
 
