--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
 .userName {
   font-weight: 500;
   letter-spacing: -0.02em;
-  color: var(--text-color);
+  color: var(--text-header-color);
 }
 
 .profile_image {
@@ -38,7 +38,7 @@
 .userIcon {
   width: 26px;
   height: 26px;
-  fill: var(--logo-icon);
+  fill: var(--logo-header-icon);
   position: absolute;
   bottom: -1px;
   left: 50%;
