--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,11 +1,13 @@
 :root {
   --logo-background: #1f1f1f;
   --logo-icon: #fff;
+  --logo-header-icon: #fff;
   --background-color: #f6f6f7;
   --header-background-color: #fcfcfc;
   --sidebar-background-color: #fff;
   --sidebar-card-background: #f6f6f7;
   --text-color: #161616;
+  --text-header-color: #161616;
   --secondary-text-color: rgba(255, 255, 255, 0.8);
   --third-text-color: rgba(22, 22, 22, 0.5);
   --thumb-color: rgba(22, 22, 22, 0.1);
@@ -31,6 +33,7 @@
   --sidebar-background-color: #121212;
   --sidebar-card-background: #1f1f1f;
   --text-color: #fff;
+  --text-header-color: #fff;
   --secondary-text-color: rgba(255, 255, 255, 0.7);
   --third-text-color: rgba(255, 255, 255, 0.5);
   --filter-color: rgba(255, 255, 255, 0.8);
@@ -39,17 +42,19 @@
   --icon-modal-close: #fff;
   --icon-logout: #bedbb0;
   --label-color: rgba(255, 255, 255, 1);
-  --icon-color:#888888;
+  --icon-color: #888888;
 }
 
 .violet {
   --logo-background: #ecedfd;
   --logo-icon: #5255bc;
+  --logo-header-icon: #fff;
   --background-color: #ecedfd;
   --header-background-color: #fff;
   --sidebar-background-color: #5255bc;
   --sidebar-card-background: rgba(236, 237, 253, 0.4);
   --text-color: #fff;
+  --text-header-color: #161616;
   --secondary-text-color: rgba(255, 255, 255, 0.7);
   --third-text-color: rgba(255, 255, 255, 0.5);
   --accent: #5255bc;
