--- a/src/components/AddCard/AddCard.module.css
+++ b/src/components/AddCard/AddCard.module.css
@@ -1,7 +1,7 @@
 .title {
   font-size: 18px;
   font-weight: 500;
-  color: var(--text-color);
+  color: var(--text-header-color);
   margin-bottom: 24px;
 }
 
