--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -86,6 +86,9 @@
   border-radius: 8px;
   background-color: #161616;
   transition: all 0.3s ease-in-out;
+  transform-origin: center center;
+  will-change: transform;
+  -webkit-font-smoothing: antialiased;
   &:hover,
   &:focus {
     background-color: #161616d3;
@@ -108,15 +111,20 @@
   }
 }
 
-.login {
+.loginWrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.login {
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.28px;
   color: #161616;
   transition: all 0.3s ease-in-out;
+  transform-origin: center center;
+  will-change: transform;
+  -webkit-font-smoothing: antialiased;
   &:hover,
   &:focus {
     color: #161616c5;
