--- a/src/components/HeaderDashboard/HeaderDashboard.module.css
+++ b/src/components/HeaderDashboard/HeaderDashboard.module.css
@@ -17,6 +17,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  margin-left: auto;
   color: var(--filter-color);
   font-size: 14px;
   font-weight: 500;
