(fixed styles ) column six styles

--- a/src/components/BoardForm/BoardForm.module.css
+++ b/src/components/BoardForm/BoardForm.module.css
@@ -10,6 +10,10 @@
   margin-bottom: 24px;
 }
 
+.newBoardTitle {
+  color: var(--label-color);
+}
+
 .titleInput {
   border: none;
   border: 1px solid #bedbb0;
