--- a/src/components/AddCard/AddCard.module.css
+++ b/src/components/AddCard/AddCard.module.css
@@ -7,7 +7,7 @@
 
 .label {
   font-size: 12px;
-  color: var(--third-text-color);
+  color: var(--card-label);
   margin-bottom: 5px;
   line-height: 1.5;
 }
