--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -8,12 +8,13 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .outlet {
   width: 100%;
   height: 100%;
+  background-color: var(--background-color);
 }
 
 .blur {
