--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,15 +7,14 @@
   width: 225px;
   padding: 14px;
   transition: all ease-in-out 300ms;
-  height: calc(100vh - 10px)
+  /* height: calc(100vh - 10px) */
+  height: 100%;
 }
-
 
 .mobile {
   position: fixed;
   z-index: 99;
 }
-
 
 .sidebarOpen {
   transform: translateX(0);
@@ -50,7 +49,6 @@
   height: 32px;
 }
 
-
 .iconlogout {
   fill: none;
   stroke: #bedbb0;
@@ -64,10 +62,6 @@
   font-weight: 500;
 }
 
-
-
-
-
 @media (min-width: 768px) {
   .sidebar {
     width: 100%;
@@ -78,7 +72,6 @@
 }
 
 @media (min-width: 1440px) {
-
   .sidebar {
     /* justify-content: flex-start; */
   }
