--- a/src/components/PriorityPicker/PriorityPicker.css
+++ b/src/components/PriorityPicker/PriorityPicker.css
@@ -21,23 +21,23 @@
 }
 
 .priority-picker-radio-Without:before {
-  background-color: #c9b7b7 !important;
-  border-color: #c9b7b7 !important;
+  background-color: var(--without) !important;
+  border-color: var(--without) !important;
 }
 
 .priority-picker-radio-Low:before {
-  background-color: #8fa1d0 !important;
-  border-color: #8fa1d0 !important;
+  background-color: var(--low) !important;
+  border-color: var(--low) !important;
 }
 
 .priority-picker-radio-Medium:before {
-  background-color: #e09cb5 !important;
-  border-color: #e09cb5 !important;
+  background-color: var(--medium) !important;
+  border-color: var(--medium) !important;
 }
 
 .priority-picker-radio-High:before {
-  background-color: #bedbb0 !important;
-  border-color: #bedbb0 !important;
+  background-color: var(--hight) !important;
+  border-color: var(--hight) !important;
 }
 
 .priority-picker-radio.Mui-checked:before {
@@ -53,17 +53,17 @@
 }
 
 .priority-picker-radio-Without {
-  color: #c9b7b7 !important;
+  color: var(--without) !important;
 }
 
 .priority-picker-radio-Low {
-  color: #8fa1d0 !important;
+  color: var(--low) !important;
 }
 
 .priority-picker-radio-Medium {
-  color: #e09cb5 !important;
+  color: var(--medium) !important;
 }
 
 .priority-picker-radio-High {
-  color: #bedbb0 !important;
+  color: var(--hight) !important;
 }
