--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -15,7 +15,7 @@
   --accent: #bedbb0;
   --low: #8fa1d0;
   --medium: #e09cb5;
-  --without: rgba(255, 255, 255, 0.3);
+  --without: #bababa;
   --hight: #bedbb0;
   --accentBtn: #9dc888;
   --filter-color: rgba(22, 22, 22, 0.8);
