updated theme background an text color

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,12 +4,14 @@
   --logo-header-icon: #fff;
   --background-color: #f6f6f7;
   --header-background-color: #fcfcfc;
+  --theme-background-color: #fcfcfc;
   --sidebar-background-color: #fff;
   --sidebar-card-background: #f6f6f7;
   --text-color: #161616;
   --text-header-color: #161616;
   --secondary-text-color: rgba(255, 255, 255, 0.8);
   --third-text-color: rgba(22, 22, 22, 0.5);
+  --theme-text-color: #161616;
   --thumb-color: rgba(22, 22, 22, 0.1);
   --background-thumb-color: #e8e8e8;
   --accent: #bedbb0;
@@ -36,10 +38,12 @@
   --header-background-color: #161616;
   --sidebar-background-color: #121212;
   --sidebar-card-background: #1f1f1f;
+  --theme-background-color: #161616;
   --text-color: #fff;
   --text-header-color: #fff;
   --secondary-text-color: rgba(255, 255, 255, 0.7);
   --third-text-color: rgba(255, 255, 255, 0.5);
+  --theme-text-color: rgba(255, 255, 255, 0.5);
   --filter-color: rgba(255, 255, 255, 0.8);
   --add-column-button-background: rgba(18, 18, 18, 1);
   --icon-wrapper-btn: #161616;
@@ -60,11 +64,13 @@
   --background-color: #ecedfd;
   --header-background-color: #fff;
   --sidebar-background-color: #5255bc;
+  --theme-background-color: #fcfcfc;
   --sidebar-card-background: rgba(236, 237, 253, 0.4);
   --text-color: #fff;
   --text-header-color: #161616;
   --secondary-text-color: rgba(255, 255, 255, 0.7);
   --third-text-color: rgba(255, 255, 255, 0.5);
+  --theme-text-color: #161616;
   --accent: #5255bc;
   --accentBtn: #7b7ede;
   --add-column-button-background: rgba(255, 255, 255, 1);
