--- a/src/components/HeaderTheme/HeaderTheme.css
+++ b/src/components/HeaderTheme/HeaderTheme.css
@@ -3,6 +3,7 @@
   padding: 10px 0px !important;
   min-width: 100px !important;
   box-shadow: 0px 4px 16px 0px rgba(17, 17, 17, 0.1) !important;
+  background-color: var(--theme-background-color) !important;
 }
 
 .MuiList-root {
@@ -13,14 +14,14 @@
   font-family: Poppins;
   font-size: 14px;
   font-weight: 400;
-  color: var(--text-color);
+  color: var(--theme-text-color) !important;
   line-height: 1.5;
   transition: color 0.2s ease, color 0.2s ease;
   padding: 4px 18px;
 }
 
 .MuiMenuItem-root:hover {
-  color: var(--accent);
+  color: var(--accent) !important;
   background-color: transparent !important;
 }
 
