--- a/src/components/HeaderTheme/HeaderTheme.module.css
+++ b/src/components/HeaderTheme/HeaderTheme.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100px;
+
   align-items: flex-start;
   gap: 4px;
   border-bottom: 2px solid transparent;
