fix colors/add hovers

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -31,6 +31,8 @@
   --scrollbar-thumb: #e8e8e8;
   --card-label: rgba(22, 22, 22, 0.5);
   --icon-color-background: #f6f6f7;
+  --card-background: #fff;
+  --card-secondary-text: rgba(22, 22, 22, 0.7);
 }
 
 .dark {
@@ -55,6 +57,8 @@
   --scrollbar-thumb: rgba(255, 255, 255, 0.1);
   --card-label: rgba(255, 255, 255, 0.5);
   --icon-color-background: #1f1f1f;
+  --card-background: #121212;
+  --card-secondary-text: rgba(255, 255, 255, 0.5);
 }
 
 .violet {
@@ -83,4 +87,6 @@
   --scrollbar-thumb: #b8bcfd;
   --card-label: rgba(22, 22, 22, 0.5);
   --icon-color-background: #ecedfd;
+  --card-background: #fff;
+  --card-secondary-text: rgba(22, 22, 22, 0.7);
 }
