--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background: var(--sidebar-background-color);
+  background: var(--card-background);
   border-radius: 8px;
   padding: 14px 14px 14px 24px;
   width: 100%;
@@ -27,13 +27,13 @@
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 8px;
-  color: var(--text-color);
+  color: var(--label-color);
 }
 
 .task_description {
   height: 38px;
   overflow: hidden;
-  color: var(--secondary-text-color);
+  color: var(--card-secondary-text);
   text-overflow: ellipsis;
   font-weight: 400;
   font-size: 12px;
@@ -66,7 +66,7 @@
 .wrapper_title {
   font-size: 8px;
   font-weight: 400;
-  color: var(--text-color);
+  color: var(--third-text-color);
   opacity: 0.5;
 }
 
@@ -75,7 +75,7 @@
   font-family: Poppins;
   font-size: 10px;
   font-weight: 400;
-  color: var(--text-color);
+  color: var(--label-color);
   font-style: normal;
 }
 
@@ -84,7 +84,7 @@
   align-items: center;
   gap: 4px;
   font-size: 12px;
-  color: var(--text-color);
+  color: var(--icon-color);
 }
 
 .task_deadline {
@@ -92,7 +92,7 @@
   align-items: center;
   gap: 8px;
   font-size: 10px;
-  color: var(--text-color);
+  color: var(--label-color);
 }
 
 .task_priority::before {
@@ -142,6 +142,16 @@
   animation: pulse 1.5s infinite;
 }
 
+.right_arrow {
+  stroke: var(--icon-color);
+  fill: none;
+  transition: stroke 0.3s ease;
+}
+
+.right_arrow:hover {
+  stroke: var(--accent);
+}
+
 @keyframes pulse {
   0%,
   100% {
@@ -164,8 +174,8 @@
   width: 16px;
   height: 16px;
   fill: none;
-  color: var(--text-color);
-  stroke: var(--text-color);
+  color: var(--icon-color);
+  stroke: var(--icon-color);
   opacity: 0.5;
 }
 
