add hover focus

--- a/src/components/Sidebar/CreateBoard/CreateBoard.module.css
+++ b/src/components/Sidebar/CreateBoard/CreateBoard.module.css
@@ -21,15 +21,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     transition: background-color 0.3s ease;
 
-    :hover,
-    :focus {
-        background-color: var(--accentBtn);
-        border-radius: 6px;
-    }
+}
 
+.createBoardBtn.btn:hover,
+.createBoardBtn.btn:focus {
+    background-color: var(--accentBtn);
+    border-radius: 6px;
 }
 
 .btnPlus {
