--- a/src/components/NeedHelp/NeedHelp.module.css
+++ b/src/components/NeedHelp/NeedHelp.module.css
@@ -32,9 +32,6 @@
 }
 
 .button {
-  /* font-weight: 500;
-  letter-spacing: -0.02em;
-   */
   font-family: Poppins;
   font-size: 12px;
   font-weight: 500;
@@ -43,10 +40,22 @@
   color: var(--text-color);
 }
 
+.textHelp:hover,
+.textHelp:focus {
+  color: var(--accentBtn);
+}
+
+
 .icon {
   stroke: var(--text-color);
   fill: transparent;
 }
+
+/* 
+.icon:hover,
+.icon:focus {
+  stroke: var(--accentBtn);
+} */
 
 @media (min-width: 375px) {}
 
