--- a/src/components/Sidebar/Logout/Logout.module.css
+++ b/src/components/Sidebar/Logout/Logout.module.css
@@ -14,6 +14,12 @@
   height: 32px;
 }
 
+.textLogout:hover,
+.textLogout:focus {
+  color: var(--accentBtn);
+}
+
+
 .iconlogout {
   fill: none;
   stroke: var(--icon-logout);
