--- a/src/components/Sidebar/Logout/Logout.module.css
+++ b/src/components/Sidebar/Logout/Logout.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   padding-left: 24px;
+  padding-bottom: 24px;
 }
 
 .logoutBtn {
@@ -19,7 +20,6 @@
   color: var(--accentBtn);
 }
 
-
 .iconlogout {
   fill: none;
   stroke: var(--icon-logout);
@@ -32,7 +32,6 @@
   color: var(--text-color);
   font-weight: 500;
 }
-
 
 @media (min-width: 1440px) {
   .textLogout {
