--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -5,7 +5,7 @@
   gap: 10px;
   background-color: var(--sidebar-background-color);
   width: 225px;
-  padding: 14px;
+  padding: 0;
   transition: all ease-in-out 300ms;
   /* height: calc(100vh - 10px) */
   height: 100%;
@@ -66,8 +66,11 @@
   .sidebar {
     width: 100%;
     max-width: 260px;
-    padding: 24px;
+    padding: 0;
     /* overflow: hidden; */
+  }
+  .wrap {
+    padding: 24px;
   }
 }
 
@@ -75,4 +78,10 @@
   .sidebar {
     /* justify-content: flex-start; */
   }
+}
+.project {
+  margin-bottom: auto;
+}
+.wrap {
+  padding: 14px;
 }
