--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -27,14 +27,14 @@ input::-webkit-inner-spin-button {
 .active {
   & button {
     display: block !important;
-    stroke: var(--third-text-color);
+    stroke: var(--board-item-active-icon);
   }
   color: var(--text-color) !important;
   stroke: var(--text-color) !important;
-  background-color: var(--third-text-color);
+  background-color: var(--board-item-active-background);
   & :after {
     content: '';
-    background-color: var(--accent);
+    background-color: var(--board-item-active-accent);
     position: absolute;
     top: 0;
     right: 0;
