--- a/src/components/Sidebar/CreateBoard/CreateBoard.module.css
+++ b/src/components/Sidebar/CreateBoard/CreateBoard.module.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid var(--thumb-color);
-    border-top: 1px solid var(--thumb-color);
+    border-bottom: 1px solid var(--vector-item-liner);
+    border-top: 1px solid var(--vector-item-liner);
     padding: 14px 0;
     width: 100%;
     text-align: center;
