Edit prof violet theme fix

--- a/src/components/EditProfile/EditProfile.module.css
+++ b/src/components/EditProfile/EditProfile.module.css
@@ -1,5 +1,5 @@
 .title {
-  color: var(--text-color);
+  color: var(--text-header-color);
   font-size: 18px;
   font-weight: 500;
   line-height: normal;
@@ -80,7 +80,7 @@
   border: 1px solid var(--hight);
   border-radius: 8px;
   background-color: transparent;
-  color: var(--text-color);
+  color: var(--text-header-color);
   opacity: 0.4;
   transition: all 0.3s ease-in-out;
   &:hover,
@@ -88,6 +88,11 @@
     opacity: 1;
     outline: none;
   }
+}
+
+.field::placeholder {
+  color: var(--text-header-color);
+  opacity: 0.4;
 }
 .error {
   position: absolute;
