--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,7 +7,6 @@
   width: 225px;
   padding: 0;
   transition: all ease-in-out 300ms;
-  /* height: calc(100vh - 10px) */
   height: 100%;
 }
 
@@ -62,12 +61,15 @@
   font-weight: 500;
 }
 
+.wrap {
+  padding-left: 14px;
+}
+
 @media (min-width: 768px) {
   .sidebar {
     width: 100%;
     max-width: 260px;
     padding: 0;
-    /* overflow: hidden; */
   }
 
   .wrap {
@@ -76,15 +78,10 @@
 }
 
 @media (min-width: 1440px) {
-  .sidebar {
-    /* justify-content: flex-start; */
+
+
+  .project {
+    margin-bottom: auto;
   }
-}
 
-.project {
-  margin-bottom: auto;
-}
-
-.wrap {
-  padding: 14px;
 }
