--- a/src/components/NeedHelp/NeedHelp.module.css
+++ b/src/components/NeedHelp/NeedHelp.module.css
@@ -38,6 +38,8 @@
   line-height: 18px;
   letter-spacing: -0.02em;
   color: var(--text-color);
+  transition: color 0.3s ease;
+
 }
 
 .textHelp:hover,
